+ Added atkAttribute->setSearchMode() for setting searchmode per attrib. [Boy]
+ Made atkAttribute store the HTML id and added getAttributeHTMLId() to get 
  the stored HTML id. [Boy]
+ Added "view all" link to navigation links when searching [Boy]
+ If PHP's sessionid is corrupted, ATK no longer displays an error. [Boy]
+ atkManyBoolRelation can now be properly hidden. (bug #428) [Yury]
* Fixed typo in php version check. [Ivo]
* Fixed bug in cascade delete. (bug #419) [Ivo]
* atkManyToOneRelation no longer searches on primary key values and 
  searchconditions are now grouped together. [Ivo, Boy]
* atkSecureRelation passes along searchmode to its attributes. [Boy]
* atkImportHandler now handles relations better. [Boy]
* Improved searching on atkOneToMany- and atkManyToOneRelations. [Boy]
* Removed deprecated call-time-pass-by-reference. [MartinL, Boy]
* Fixed bug in atkOneToOneRelation search. [Ivo]
* atkClassLoader now handles nonexisting classes gracefully. [Ivo]
* atkOneToManyRelation now passes its filters to autolink feature and added 
  support for newlyadded records. [Yury]
* Functional decomposition of importhandler. [Boy]
* Improved PostgreSQL error reporting. [Boy]
* Fixed file export with MSIE in combination with SSL (https). [Wim]
* atkNumberAttribute now reads "decimals_seperator" from the language file 
  instead of assuming '.' as decimal separator. [Boy]
* Changed image paths in outlooks top.tpl to a relative filepath. [Martin]
* Fixed an infinite loop in atkOneToManyRelation::translateSelector(). [Boy] 
* atkManyBoolRelation can now use alpha-numeric characters as primary keys. 
  (bug #450) [Gustavo]
* atkImport now returns false if file does not exist. [Dennis-Jan]
* Added setLocalKey() and setRemoteKey() to atkManyToManyRelation and renamed
  remoteKey() and localKey() to getRemoteKey() and getLocalKey(). [Ivo]
* Fixed bug in atkDateAttribute that crashed some IE 6 browsers. [Peter]

Changes in ATK 5.1.0
--------------------